required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed MapScript shape->classindex is always 0 (#3406)

- Fixed PHP MapScript integer passing broken on 64bit systems (#3412)

- Fix MS_NONSQUARE to work in mode=map (#3413)

- Support inclusion of raster layers in query map drawing even if the results
  may not be that useful (#1842).

- Fixed auto angle: incorrectly rotated Labels. Added AUTO2 angle mode. (#1688)

- Preliminary implementation of validity mask (imageObj->img_mask) for raw
  raster data (#2181)

- Added libgd < 2.0.30 compatibility (#3293)

- Incorporate support for GDAL nodata on RGB images (#2404)

- Incorporated support for GDAL masks (GDAL RFC 15) (#2640)

- Fixed XML transformation issues with expressions and symbols (#3397)

- Check error returns from mapstring functions (#2988)

- Add support for multiliple srs in  WFS 1.1.0 (#3227)

- Fixed PHP/MapScript owsRequestObj->loadParams() method when using php in a non cgi/fcgi/cli mode. (#1975)

- Ensure that non-file raster datasets work (#3253) 

- Correct mutex locking problem with rasters with no inherent georef. (#3368) 

- Correct ungeoreferenced defaults via GetExtent() on raster layer (#3368)

- PHP Mapscript refactoring: take full advantage of PHP 5 / Zend Engine 2 (#3278)"

- Fixed msRemoveHashTable() to return the proper value on failure/success.

- Correct one pass query problems and OGC filter query (#3305)

- Fixed msMSSQL2008CloseConnection() to free the statement handle properly (#3244)

- Fixed the query handling with the MSSQL2008 driver (#3058)

- Fixed swig zoomRectangle() method: the maxy in the rect object have to be < miny value (#3286)
